<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">JAJAHOME</string>
    <string name="loading_more">正在获取更多</string>
    <string name="finish">完成</string>
    <string name="loading">加载中</string>
    <string name="data_error">网络出小差了</string>
    <string name="press_again_to_exit">再按一次退出应用</string>
    <string name="my_jajahome">我的JAJAHOME</string>
    <string name="collext">我的收藏</string>
    <string name="project_picture">设计方案和喜欢的图片</string>
    <string name="project">我的方案</string>
    <string name="project_diy">设计方案和我的DIY</string>
    <string name="setting">设置</string>
    <string name="account_address">账户管理及收货地址</string>
    <string name="shareApp">分享APP</string>
    <string name="share_jajahome">分享JAJAHOME</string>
    <string name="inviteNo">我的邀请码</string>
    <string name="share_invite_no">分享我的邀请码</string>
    <string name="url_empty">错误的地址链接</string>
    <string name="room">空间</string>
    <string name="all">全部</string>
    <string name="style">风格</string>
    <string name="color">色系</string>
    <string name="brand">品牌</string>
    <string name="price">价格</string>
    <string name="input_user">请输入手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_login">账户登录</string>
    <string name="user_register">用户注册</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_yanzhengma">请输入验证码</string>
    <string name="input_pwd_again">请重新输入密码</string>
    <string name="input_invite">请输入邀请码</string>
    <string name="treaty">许可认证协议</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="find_pwd">找回密码</string>
    <string name="send">提交</string>
    <string name="commit_apply">提交申请</string>
    <string name="empty_phone">手机号码不能为空</string>
    <string name="back">返回</string>
    <string name="pls_ask_price">请询价</string>
    <string name="category">类别</string>
    <string name="toast_login_username_empty">请输入您的手机号码</string>
    <string name="toast_login_sms_empty">请输入您的验证码</string>
    <string name="toast_login_pwd_empty">请输入您的密码</string>
    <string name="toast_login_pwdAgain_empty">请重新输入您的密码</string>
    <string name="toast_login_pwd_no">两次密码有误，请重新输入</string>
    <string name="toast_login_invite_no_empty">请输入您的邀请码</string>
    <string name="toast_password__limit_length">密码长度不少于六位</string>
    <string name="toast_login_phone_error">请检查您输入的手机号码是否正确</string>
    <string name="networkProblem">网络异常</string>
    <string name="set">套装</string>
    <string name="item">单品</string>
    <string name="show">秀家</string>
    <string name="designer_user">设计+</string>
    <string name="diy_method">DIY方案</string>
    <string name="diy">DIY</string>
    <string name="ziliao">个人资料</string>
    <string name="safe_user">账户与安全</string>
    <string name="inform">接收通知</string>
    <string name="news">要开启或关闭消息的推送消息，请在手机的\"设置\"-\"通知\"中找到\"消息\"进行设置</string>
    <string name="cache">清除缓存</string>
    <string name="bang">绑定手机</string>
    <string name="jiebang">解绑手机</string>
    <string name="serve">服务与反馈</string>
    <string name="aboutUs">关于我们</string>
    <string name="exit">退出当前帐号</string>
    <string name="data_change">资料修改</string>
    <string name="account_safe">账户与安全</string>
    <string name="reset">重置</string>
    <string name="copyright_news">版权信息</string>
    <string name="contact_us">联系我们</string>
    <string name="check_upgrade">检测新版本</string>
    <string name="contact_seller">联系卖家</string>
    <string name="change_pwd">修改密码</string>
    <string name="toast_pwd_old_empty">原密码不能为空</string>
    <string name="toast_pwd_new_empty">新密码不能为空</string>
    <string name="toast__pwd_again_empty">确认密码不能为空</string>
    <string name="friend">邀请的好友</string>
    <string name="friend_list">我邀请的好友</string>
    <string name="address_change">编辑地址</string>
    <string name="choose_area">请选择所在地区</string>
    <string name="edit_detail_adress">请输入详细地址</string>
    <string name="postcode">邮政编码</string>
    <string name="edit_name">收货人姓名</string>
    <string name="edit_phone">联系手机</string>
    <string name="edit_tel">电话</string>
    <string name="my_address">我的收货地址</string>
    <string name="address">收货地址</string>
    <string name="goods_detail">套装</string>
    <string name="goods_item">单品</string>
    <string name="goods_diy">DIY</string>
    <string name="material">材质</string>
    <string name="related">相关单品</string>
    <string name="detail">详细参数</string>
    <string name="code">编号</string>
    <string name="place">产地</string>
    <string name="guige">规格</string>
    <string name="collect_success">收藏成功</string>
    <string name="del_collect_success">取消收藏成功</string>
    <string name="comment">累积评论</string>
    <string name="user_comment">评论</string>
    <string name="pls_input_user_comment">请输入评论内容</string>
    <string name="pls_input_reply">请输入回复内容</string>
    <string name="is_commentting">评论中</string>
    <string name="is_replying">回复中</string>
    <string name="apply_designer">点击申请成为VIP会员</string>
    <string name="applying_designer">申请中</string>
    <string name="decoration_company">装饰公司</string>
    <string name="designer">VIP会员</string>
    <string name="city_partner">城市运营商</string>
    <string name="xiehui">协会</string>
    <string name="news_center">消息中心</string>
    <string name="fabric">面料</string>
    <string name="weichat">微信</string>
    <string name="weichat_zone">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="cancel">取消</string>
    <string name="my_designer">我的申请</string>
    <string name="designer_news">请保证您资料的真实性，实名认证通过后，您的头像下面会带有“v\"字样</string>
    <string name="input_name">请输入您的真实姓名(必填)</string>
    <string name="input_identify">请输入正确的身份证号码(必填)</string>
    <string name="input_address">请选择您所在的地区省市(必填)</string>
    <string name="input_company">请输入您的公司名或工作室名(必填)</string>
    <string name="tv_designer_commit">点击上传身份证正面照片(必填)</string>
    <string name="tv_designer_commit_no">点击上传身份证反面照片(必填)</string>
    <string name="tv_designer_commit_my">点击上传本人名片(选填)</string>
    <string name="tv_designer_agreementy">VIP会员协议(必填)</string>
    <string name="skip">跳过</string>
    <string name="pls_agress_desiner">请同意VIP会员协议</string>
    <string name="agree_xiyi">请同意许可认证协议</string>
    <string name="userNewsOutof">用户信息已失效，请重新登陆</string>
    <string name="toast_login_telephone_error">请检查输入的电话号码是否有误</string>
    <string name="toast_postCode_error">请检查邮编输入是否正确</string>
    <string name="toast_login_area_empty">请选择所在地区</string>
    <string name="toast_address_empty">请输入详细地址</string>
    <string name="toast_postcode_empty">请输入邮政编码</string>
    <string name="toast_name_empty">请输入收货人姓名</string>
    <string name="toast_phone_empty">请输入联系人手机</string>
    <string name="toast_telephong_empty">请输入联系电话</string>
    <string name="save_success">保存成功</string>
    <string name="publisher">发布者</string>
    <string name="type">类型</string>
    <string name="time">时间</string>
    <string name="show_detail">详情</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="phone_is_illegal">手机号格式不正确</string>
    <string name="city">城市</string>
    <string name="house">找我家</string>
    <string name="weibo">新浪微博</string>
    <string name="buy_now">立即购买</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="shopping_cart"> 购物车</string>
    <string name="pay_order">支付订单</string>
    <string name="pay">付款</string>
    <string name="sale_h">服务</string>
    <string name="cancel_order">取消订单</string>
    <string name="exit_money">申请退款</string>
    <string name="distribution_way">配送方式</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_count">请选择支付次数</string>
    <string name="pay_num">支付次数</string>
    <string name="order_num">订单编号：%1$s</string>
    <string name="order">订单</string>
    <string name="select_way_pay">请选择支付方式</string>
    <string name="my_order">我的订单</string>
    <string name="pay_price">合计：￥%1$s</string>
    <string name="order_total_num">共%1$d件</string>
    <string name="re_login">当前账号已在其他设备上登录，是否重新登录？</string>
    <string name="confirm_order">确认收货</string>
    <string name="cancel_order_success">取消订单成功</string>
    <string name="related_set">相关套装</string>
    <string name="sell_list">销售清单</string>
    <string name="connect_shopping">联系商家</string>
    <string name="item_kan">查看更多</string>
    <string name="set_country">所在地区</string>
    <string name="set_detail">详细地址</string>
    <string name="set_post">邮政编码</string>
    <string name="set_name">收货人姓名</string>
    <string name="set_phone">联系手机</string>
    <string name="set_call">电话号码</string>
    <string name="designer_bisai">大赛</string>
    <string name="designer_yuanch">原创</string>
    <string name="designer_beautipic">美图</string>
    <string name="designer_beautiwen">美文</string>
    <string name="order_whole_pay">全额一次性付清</string>
    <string name="order_second_pay">预付订金50%,余额发货前15天付清</string>
    <string name="current_pay">本次支付</string>
    <string name="yun_order">运单号</string>
    <string name="search_mater">查看物流</string>
    <string name="cancel_pop">商品有问题，不想要了</string>
    <string name="no_buy">我不想买了</string>
    <string name="buy_err">信息填写错误，重新拍</string>
    <string name="other_reason">其它原因</string>
    <string name="cancel_pop_buy">太贵了</string>
    <string name="cancel_exit">无条件退款</string>
    <string name="cancel_find">找到更好的了</string>
    <string name="cancel_again">不，我点错了</string>
    <string name="set_please_name">请输入收货人姓名</string>
    <string name="set_please_post">请输入邮政编码</string>
    <string name="set_please_phone">请输入联系人手机</string>
    <string name="set_please_detail">请输入详细地址</string>
    <string name="set_please_call">请输入联系电话</string>
    <string name="apply_introduce">请放心上传，我们对上传的照片会做水印处理，仅限JAJAHOME平台身份验证使用。</string>
    <string name="buy_known">购买须知</string>
    <string name="buy_agree">请确认购买须知</string>
    <string name="phone_num">手机号:</string>
    <string name="set_password">设置密码</string>
    <string name="nian_zheng_ma">验证码</string>
    <string name="send_phone">发送</string>
    <string name="band">绑定</string>
    <string name="band_phone">绑定手机号</string>
    <string name="invite_no_introduce">如果没有邀请码，请向给您介绍的人或者客服索取,\n热线400-690-3766。</string>
    <string name="third_invite_no">如果没有邀请码,请向给您\n介绍的人或者客服索取,热\n线400-690-3766。</string>
    <string name="register_invite_no">如果没有邀请码,请向给您介绍的人或者客服索取,热线400-690-3766。</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="order_xian">请认清以下账户打款，然后填写打款人的户名和账户，并拍照上传转账凭证。</string>
    <string name="pop_text_collecting_account">收款账户</string>
    <string name="pop_text_account_name">户名 : 杭州过夹夹家居有限分司</string>
    <string name="pop_text_account">账号 : 2010 0013 8581 001</string>
    <string name="pop_bank_of_deposit">开户银行 : 杭州联合农村商业银行股份有限公司</string>
    <string name="pop_pay_account">支付账户</string>
    <string name="pop_seller_company">杭州过家家科技信息有限公司</string>
    <string name="pop_account_name">户名</string>
    <string name="pop_account">账号</string>
    <string name="pop_seller_account">2010 0013 8581 001</string>
</resources>