<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grag_by"
    android:orientation="vertical">

    <include layout="@layout/address_title" />

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_address"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:editable="false"
                android:hint="@string/choose_area"
                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/set_country" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/div_color" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_detail_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/edit_detail_adress"
                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/set_detail" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/div_color" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_postcode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/set_please_post"
                android:inputType="number"

                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/set_post" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/div_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/set_please_name"
                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/set_name" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/div_color" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/set_please_phone"
                android:inputType="phone"

                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:text="@string/set_phone" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/div_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <EditText
                android:id="@+id/edit_telephone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_title_height"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/set_please_call"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_100"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/text_set_gray"
                android:textSize="@dimen/text_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_call" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/ll_edit"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/cb_register"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="设置为默认地址"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sava"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/address_ll"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_login"
        android:text="保存"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />
</RelativeLayout>