<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@drawable/bg_background_vr"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_white_radio"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/view_weibo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_btn_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/ic_share_sina_weibo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/weibo"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_btn_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/ic_share_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/qq"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_btn_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/ic_share_weichat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/weichat"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_weixin_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_btn_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/ic_share_weichat_zone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/weichat_zone"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_white_radio"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/orange_ll"
        android:textSize="@dimen/text_size_14" />
</LinearLayout>